Fix css spacing on code element

--- a/source/_vendor/solarized/stylesheets/_syntax.scss
+++ b/source/_vendor/solarized/stylesheets/_syntax.scss
@@ -221,7 +221,7 @@ figure.code {
   padding: 0;
   border: 0;
   margin: 1em 0;
-  pre { margin-bottom: 0; }
+  pre { margin: 0; }
   figcaption {
     position: relative;
     @extend .code-title;
